<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/hiveListFragment"
        android:icon="@drawable/ic_nav_hive"
        android:title="@string/nav_hives" />
    <item
        android:id="@+id/inspectionFragment"
        android:icon="@drawable/ic_nav_inspect"
        android:title="@string/nav_inspect" />
    <item
        android:id="@+id/harvestFragment"
        android:icon="@drawable/ic_nav_harvest"
        android:title="@string/nav_harvest" />
    <item
        android:id="@+id/floraCalendarFragment"
        android:icon="@drawable/ic_nav_flora"
        android:title="@string/nav_flora" />
</menu>
